secure-delivery/policies/kyverno/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-demo-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - kyverno
                - argocd
                - argo-rollouts
                - monitoring
                - cert-manager
                - ingress-nginx
                - vault
                - external-secrets
      verifyImages:
        - imageReferences:
            - "ghcr.io/vorobey5858/*"
          required: true
          mutateDigest: true
          verifyDigest: true
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA6rjJPxfzfXI0RUksnF96
[...]
                      PQIDAQAB
                      -----END PUBLIC KEY-----
